# nybbles

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  clippy.toml  deny.toml  release.toml
.github/: CODEOWNERS
.github/workflows/: bench.yml  ci.yml
benches/: bench.rs  prelude.rs
benches/benches/: clone.rs  cmp.rs  convert.rs  iter.rs  mod.rs  ops.rs  prelude.rs  slice.rs
examples/: test_verification.rs
nybbles-bench/: Cargo.toml
nybbles-bench/src/: lib.rs
proptest-regressions/: nibbles.txt
src/: lib.rs  nibbles.rs
tests/: proptests.rs
