[package]
name = "nybbles"
version = "0.2.0"
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
description = "Efficient nibble-sized (4-bit) byte sequence data structure"
edition = "2021"
rust-version = "1.64"
license = "MIT OR Apache-2.0"
categories = ["data-structures", "no-std"]
keywords = ["nibbles", "vector", "ethereum"]
homepage = "https://github.com/alloy-rs/nybbles"
repository = "https://github.com/alloy-rs/nybbles"
exclude = [".github/", "deny.toml", "release.toml", "rustfmt.toml"]

[dependencies]
smallvec = { version = "1.0", default-features = false, features = ["const_new", "union"] }
const-hex = { version = "1.10", default-features = false, features = ["alloc"] }

# serde
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }

# rlp
alloy-rlp = { version = "0.3", default-features = false, optional = true }

# arbitrary
arbitrary = { version = "1.3", default-features = false, optional = true, features = ["derive"] }
proptest = { version = "1.4", default-features = false, optional = true, features = ["alloc"] }

[dev-dependencies]
hex-literal = "0.4"
criterion = "0.5"

[features]
default = ["std"]
std = ["const-hex/std", "serde?/std", "alloy-rlp?/std", "proptest?/std"]
serde = ["dep:serde", "smallvec/serde"]
rlp = ["dep:alloy-rlp"]
arbitrary = ["dep:arbitrary", "dep:proptest", "smallvec/arbitrary", "std"]

[[bench]]
name = "bench"
harness = false
required-features = ["arbitrary"]
