[package]
name = "nybbles"
version = "0.3.4"
description = "Efficient nibble-sized (4-bit) byte sequence data structure"
categories = ["data-structures", "no-std"]
keywords = ["nibbles", "vector", "ethereum"]
exclude = [".github/", "deny.toml", "release.toml", "rustfmt.toml"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[workspace]
members = [".", "nybbles-bench"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.82"
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/nybbles"
repository = "https://github.com/alloy-rs/nybbles"

[lib]
bench = false

[dependencies]
smallvec = { version = "1.0", default-features = false, features = [
    "const_new",
    "union",
] }
const-hex = { version = "1.10", default-features = false, features = ["alloc"] }

# serde
serde = { version = "1.0", default-features = false, optional = true, features = [
    "derive",
] }

# rlp
alloy-rlp = { version = "0.3", default-features = false, optional = true }

# arbitrary
arbitrary = { version = "1.3", default-features = false, optional = true, features = [
    "derive",
] }
proptest = { version = "1.4", default-features = false, optional = true, features = [
    "alloc",
] }

[dev-dependencies]
nybbles = { path = ".", features = ["arbitrary"] }

hex-literal = "1"
criterion = { version = "2.10", package = "codspeed-criterion-compat" }

[features]
default = ["std"]
std = ["const-hex/std", "serde?/std", "alloy-rlp?/std", "proptest?/std"]
nightly = ["smallvec/specialization", "smallvec/may_dangle"]
serde = ["dep:serde", "smallvec/serde"]
rlp = ["dep:alloy-rlp"]
arbitrary = ["dep:arbitrary", "dep:proptest", "smallvec/arbitrary", "std"]

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = true
strip = "none"
